--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Custom ignoring files ###
+application-*.yml
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij+iml,maven,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij+iml,maven,java
 
